objects/EUR_CRM_Stock_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Net_Stock__c</fullName>
        <label>Net Stock</label>
        <summarizedField>EUR_CRM_Stock_Transaction__c.EUR_CRM_Quantity__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Stock_Transaction__c.EUR_CRM_Stock_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipLabel>Stock Items (EU)</relationshipLabel>
        <relationshipName>Stock_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Owner__c</fullName>
        <formula>EUR_CRM_Stock__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  EUR_CRM_Stock__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock__c</fullName>
        <label>Stock</label>
        <referenceTo>EUR_CRM_Stock__c</referenceTo>
        <relationshipLabel>Stock Items (EU)</relationshipLabel>
        <relationshipName>Stock_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stock Item (EU)</label>
    <listViews>
        <fullName>EUR_CRM_DK_Stock_Item</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Stock_Owner__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_Net_Stock__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Stock_Item__c.EUR_DK_Stock_Item</value>
        </filters>
        <label>All DK Stock Items</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SI-{0000000000}</displayFormat>
        <label>Stock Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Items (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Stock_Item</fullName>
        <active>true</active>
        <label>EUR DE Stock Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Stock_Item</fullName>
        <active>true</active>
        <label>EUR DK Stock Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>